# Amadeus-Telegram-MCP

./: .gitignore  README.md  pyproject.toml
scripts/: setup.sh  test-mcp.py
src/telegram_agent_mcp/: __main__.py  config.py  context.py  server.py  telegram_api.py  tools.py
tests/: conftest.py  test_config.py  test_context.py  test_integration.py  test_telegram_api.py  test_tools.py
