[project]
name = "telegram-agent-mcp"
version = "0.1.0"
description = "MCP Server for Telegram via Bot API for AI-driven interactions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7",
]

[project.scripts]
telegram-agent-mcp = "telegram_agent_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_agent_mcp"]
